frame/support/test/tests/pallet_ui/duplicate_store_attr.stderr
error: Unexpected duplicated attribute
  --> $DIR/duplicate_store_attr.rs:12:12
   |
12 |     #[pallet::generate_store(trait Store)]
   |               ^^^^^^^^^^^^^^
